--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -44,10 +44,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //Retrofit and JSON
-    implementation 'com.google.code.gson:gson:2.8.7'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    api 'com.google.code.gson:gson:2.9.0'
+    api 'com.squareup.retrofit2:retrofit:2.9.0'
+    api 'com.squareup.retrofit2:converter-gson:2.9.0'
+    api "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
     //Rxjava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
