--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'junit:junit:4.13.2'
 
     //Retrofit and JSON
     api 'com.google.code.gson:gson:2.9.0'
