--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+    // debugImplementation because LeakCanary should only run in debug builds.
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
+
+
 }
 kapt {
     correctErrorTypes true
