--- a/data/build.gradle
+++ b/data/build.gradle
@@ -21,6 +21,12 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            //shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled true
+            //shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -45,7 +51,7 @@ dependencies {
 
 
     //Room
-    def room_version = "2.3.0"
+    def room_version = "2.4.2"
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
     // To use Kotlin annotation processing tool (kapt)
@@ -53,7 +59,7 @@ dependencies {
     // optional - RxJava2 support for Room
     implementation "androidx.room:room-rxjava2:$room_version"
 
-    implementation "androidx.room:room-ktx:2.3.0"
+    implementation "androidx.room:room-ktx:2.4.2"
 
     // for room
     implementation 'android.arch.lifecycle:extensions:1.1.1'
