--- a/data/build.gradle
+++ b/data/build.gradle
@@ -52,8 +52,7 @@ dependencies {
 
     //Room
     def room_version = "2.4.2"
-    implementation("androidx.room:room-runtime:$room_version")
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    api "androidx.room:room-runtime:$room_version"
     // To use Kotlin annotation processing tool (kapt)
     kapt("androidx.room:room-compiler:$room_version")
     // optional - RxJava2 support for Room
@@ -64,8 +63,8 @@ dependencies {
     // for room
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
-    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+    kapt 'android.arch.lifecycle:compiler:1.1.1'
+    kapt 'android.arch.persistence.room:compiler:1.1.1'
 
     //Retrofit and JSON
     api 'com.google.code.gson:gson:2.9.0'
